fixed next link

--- a/01_agama/samyukta/05/SA5_7-18.md
+++ b/01_agama/samyukta/05/SA5_7-18.md
@@ -4,7 +4,7 @@ title: 'The Related Discourses | 5. Elements | 7-18 (450). Belief et al.'
 type: kramdown
 base: ../../../
 previous: SA5_6.html
-next: ../06/index.html
+next: SA5_19.html
 ---
 
 <h1><a href='../index.html'>The Related Discourses</a></h1>
