updated SA 2.1-40, mainly fixes to footnotes, a couple translation changes and typo fixes

--- a/01_agama/samyukta/02/SA2_1-4.md
+++ b/01_agama/samyukta/02/SA2_1-4.md
@@ -14,27 +14,27 @@ next: SA2_5.html
   <th class='ch'>（一八八） 無常、苦、空、非我</th>
   <th class='en'>1-4 (188). Impermanent, Painful, Empty, and Not Self</th>
   <tr>
-    <td class="ch" title='t99.2.49b7'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td class='ch' title='t99.2.49b7'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.49b8'>爾時，世尊告諸比丘： 「當正觀察眼無常。 如是觀者是名正見。 正觀故，生厭。 生厭故，離喜、離貪。離喜、貪故，我說心正解脫。</td>
+    <td class='ch' title='t99.2.49b8'>爾時，世尊告諸比丘： 「當正觀察眼無常。 如是觀者是名正見。 正觀故，生厭。 生厭故，離喜、離貪。 離喜、貪故，我說心正解脫。</td>
     <td id='p2'>2. It was then that the Bhagavān addressed the monks, “You should correctly observe the eye to be [1] impermanent … [2] painful … [3] empty … [4] not self. Observing it in this way is called right view. Because it’s correctly observed, disillusionment arises. Because disillusionment arises, one becomes free of delight and greed. I say one’s mind is correctly liberated because they are free of delight and greed.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.49b11'>「如是，耳⋯鼻⋯舌⋯身⋯意⋯離喜、離貪。 離喜、貪故，比丘，我說心正解脫。</td>
+    <td class='ch' title='t99.2.49b11'>「如是，耳⋯鼻⋯舌⋯身⋯意⋯離喜、離貪。 離喜、貪故，比丘，我說心正解脫。</td>
     <td id='p3'>3. “<em>Thus with the ear … nose … tongue … body … mind … one becomes free of delight and greed.</em> Monks, I say one’s mind is correctly liberated because they are free of delight and greed.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.49b12'>「心正解脫者能自記說： 『我生已盡，梵行已立，所作已作。 自知不受後有。』」</td>
-    <td id='p4'>4. “Someone who’s mind is correctly liberated can declare about themselves: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”</td>
+    <td class='ch' title='t99.2.49b12'>「心正解脫者能自記說： 『我生已盡，梵行已立，所作已作。』 自知不受後有。」</td>
+    <td id='p4'>4. “Someone who’s mind is correctly liberated can declare about themselves: ‘My births have been ended, the religious practice has been established, and the task has been accomplished.’ They themselves know they won’t be subject to a later existence.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.49b14'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
+    <td class='ch' title='t99.2.49b14'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
     <td id='p5'>5. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.49b16'>（如「無常」，如是「苦」、「空」、「非我」，亦如是說。）</td>
+    <td class='ch' title='t99.2.49b16'>（如「無常」，如是「苦」、「空」、「非我」，亦如是說。）</td>
     <td id='p6'>6. <em>Like “impermanence,” “pain,” “emptiness,” and “not self” are taught in the same way.</em></td>
   </tr>
 </table>
@@ -44,7 +44,7 @@ next: SA2_5.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">These four <em>sūtra</em>s (SĀ 2.1-4) are  <em>sūtra</em> no. 188 in the <cite>Taisho</cite> edition and nos. 179-82 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0049b07" target="_blank">T99.2.49b7-16</a>). They are parallel with <a href="https://suttacentral.net/sn35.156" target="_blank">SN 35.156-7</a> and <a href="../01/SA1_1-4.html" target="_blank">SĀ 1.1-4</a>. These four <em>sūtra</em>s follow the same template with the keywords “painful,” “empty,” and “not self” substituted for “impermanent” in SĀ 2.2-4. [<a href="#ref1">back</a>]</li>
+<li id="n1"><p>These four <em>sūtra</em>s (SĀ 2.1-4) are  <em>sūtra</em> no. 188 in the <cite>Taisho</cite> edition and nos. 179-82 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0049b07" target="_blank">T99.2.49b7-16</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0214a14" target="_blank">Y30.214a14-5a5</a>). They are parallel with <a href="https://suttacentral.net/sn35.156" target="_blank">SN 35.156-7</a> and <a href="../01/SA1_1-4.html" target="_blank">SĀ 1.1-4</a>. These four <em>sūtra</em>s follow the same template with the keywords “painful,” “empty,” and “not self” substituted for “impermanent” in SĀ 2.2-4. [<a href="#ref1">back</a>]</p></li>
 </ol>
 <hr/>
 
