--- a/01_agama/samyukta/02/SA2_5.md
+++ b/01_agama/samyukta/02/SA2_5.md
@@ -14,23 +14,23 @@ next: SA2_6.html
   <th class='ch'>（一八九） 正思惟</th>
   <th class='en'>5 (189). Correctly Contemplated</th>
   <tr>
-    <td class="ch" title='t99.2.49b17'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td class='ch' title='t99.2.49b17'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.49b18'>爾時，世尊告諸比丘： 「於眼當正思惟，觀察無常。 所以者何？ 於眼正思惟，觀察無常故，於眼欲貪斷。 欲貪斷故，我說心正解脫。</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “One should correctly contemplate the eye, observe that it’s impermanent[, and truly know it].<sup id="ref1"><a href="#n1">1</a></sup> Why is that? Because the eye is correctly contemplated, observed to be impermanent, [and truly known,] one’s desire and greed for the eye stops. I say one’s mind is correctly liberated because they’ve stopped desire and greed.</td>
+    <td class='ch' title='t99.2.49b18'>爾時，世尊告諸比丘： 「於眼當正思惟，觀察無常。 所以者何？ 於眼正思惟，觀察無常故，於眼欲貪斷。 欲貪斷故，我說心正解脫。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “One should correctly contemplate the eye, observe that it’s impermanent[, and truly know it].<sup id="ref2"><a href="#n2">2</a></sup> Why is that? Because the eye is correctly contemplated, observed to be impermanent, [and truly known,] one’s desire and greed for the eye stops. I say one’s mind is correctly liberated because they’ve stopped desire and greed.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.49b21'>「耳⋯鼻⋯舌⋯身⋯意，正思惟，觀察⋯故⋯欲貪斷。 欲貪斷者，我說心正解脫。</td>
+    <td class='ch' title='t99.2.49b21'>「耳⋯鼻⋯舌⋯身⋯意，正思惟，觀察⋯故⋯欲貪斷。 欲貪斷者，我說心正解脫。</td>
     <td id='p3'>3. “Because one correctly contemplates and observes … the ear … nose … tongue … body … mind, they stop desire and greed … I say one’s mind is correctly liberated because they’ve stopped desire and greed.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.49b22'>「如是，比丘，心正解脫者能自記說： 『我生已盡，梵行已立，所作已作。 自知不受後有。』」</td>
-    <td id='p4'>4. “Thus, monks, someone who’s mind is correctly liberated can declare about themselves: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”</td>
+    <td class='ch' title='t99.2.49b22'>「如是，比丘，心正解脫者能自記說： 『我生已盡，梵行已立，所作已作。』 自知不受後有。」</td>
+    <td id='p4'>4. “Thus, monks, someone who’s mind is correctly liberated can declare about themselves: ‘My births have been ended, the religious practice has been established, and the task has been accomplished.’ They themselves know they won’t be subject to a later existence.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.49b24'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
+    <td class='ch' title='t99.2.49b24'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
     <td id='p5'>5. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.</td>
   </tr>
 </table>
@@ -40,8 +40,8 @@ next: SA2_6.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is  <em>sūtra</em> no. 189 in the <cite>Taisho</cite> edition and no. 183 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0049b17" target="_blank">T99.2.49b17-25</a>). It’s parallel to <a href="https://suttacentral.net/sn35.158" target="_blank">SN 35.158-9</a> and <a href="../01/SA1_5.html" target="_blank">SĀ 1.5</a>. [<a href="#ref1">back</a>]</li>
-<li id="n1"><em>and truly know it.</em> I’ve restored this phrase because it occurs in both SĀ 1.5 (“於色當正思惟，觀色無常，<strong>如實知</strong>”) and SN 35.158 (“<em>cakkhuṁ, bhikkhave, yoniso manasi karotha, cakkhāniccatañca <strong>yathābhūtaṁ samanupassatha</strong></em>”). I place restored passages in [] to indicate that they aren’t present in the CBETA or Taisho editions. [<a href="#ref1">back</a>]</li>
+<li id="n1"><p>This is  <em>sūtra</em> no. 189 in the <cite>Taisho</cite> edition and no. 183 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0049b17" target="_blank">T99.2.49b17-25</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0215a06" target="_blank">Y30.215a6-11</a>). It’s parallel to <a href="https://suttacentral.net/sn35.158" target="_blank">SN 35.158-9</a> and <a href="../01/SA1_5.html" target="_blank">SĀ 1.5</a>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>and truly know it.</em> I’ve restored this phrase because it occurs in both SĀ 1.5 (“<span class="ch">於色當正思惟，觀色無常，<strong>如實知</strong></span>”) and SN 35.158 (“<em>cakkhuṁ, bhikkhave, yoniso manasi karotha, cakkhāniccatañca <strong>yathābhūtaṁ samanupassatha</strong></em>”). I place restored passages in [] to indicate that they aren’t present in the CBETA or Taisho editions. [<a href="#ref2">back</a>]</p></li>
 </ol>
 <hr/>
 
