--- a/01_agama/samyukta/02/SA2_8.md
+++ b/01_agama/samyukta/02/SA2_8.md
@@ -14,19 +14,19 @@ next: SA2_9.html
   <th class='ch'>（一九二） 離欲</th>
   <th class='en'>8 (192). Free of Desire</th>
   <tr>
-    <td class="ch" title='t99.2.49c13'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td class='ch' title='t99.2.49c13'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.49c14'>爾時，世尊告諸比丘： 「若於眼不離欲，心不解脫者，不堪任正盡苦。 於耳、鼻、舌、身、意不離欲，心不解脫者，不堪任正盡苦。</td>
+    <td class='ch' title='t99.2.49c14'>爾時，世尊告諸比丘： 「若於眼不離欲，心不解脫者，不堪任正盡苦。 於耳、鼻、舌、身、意不離欲，心不解脫者，不堪任正盡苦。</td>
     <td id='p2'>2. It was then that the Bhagavān addressed the monks, “If someone doesn’t become free of desire for the eye, their mind isn’t liberated, and they aren’t capable of correctly ending suffering. If they don’t become free of desire for the ear … nose … tongue … body … mind, their mind isn’t liberated, and they aren’t capable of correctly ending suffering.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.49c17'>「諸比丘，若於眼色離欲，心解脫者，彼堪任正盡苦。 於耳、鼻、舌、身、意離欲，心解脫者，堪任正盡苦。」</td>
+    <td class='ch' title='t99.2.49c17'>「諸比丘，若於眼色離欲，心解脫者，彼堪任正盡苦。 於耳、鼻、舌、身、意離欲，心解脫者，堪任正盡苦。」</td>
     <td id='p3'>3. “Monks, if someone is free of desire for the eye, their mind is liberated, and they’re capable of correctly ending suffering. If someone is free of desire for the ear … nose … tongue … body … mind, their mind is liberated, and they’re capable of correctly ending suffering.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.49c19'>佛說此經已，諸比丘聞佛所說，歡喜奉行。</td>
+    <td class='ch' title='t99.2.49c19'>佛說此經已，諸比丘聞佛所說，歡喜奉行。</td>
     <td id='p4'>4. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.</td>
   </tr>
 </table>
@@ -36,7 +36,7 @@ next: SA2_9.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is <em>sūtra</em> no. 192 in the <cite>Taisho</cite> edition and no. 186 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0049c13" target="_blank">T99.2.49c13-20</a>). It’s very similar to <a href="../01/SA1_8.html" target="_blank">SĀ 1.8</a>, which is a simpler version of <a href="https://suttacentral.net/sn35.26" target="_blank">SN 35.26</a>-<a href="https://suttacentral.net/sn35.27" target="_blank">27</a>. However, “know and understand” (知、明) has been omitted. [<a href="#ref1">back</a>]</li>
+<li id="n1"><p>This is <em>sūtra</em> no. 192 in the <cite>Taisho</cite> edition and no. 186 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0049c13" target="_blank">T99.2.49c13-20</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0216a08" target="_blank">Y30.216a8-12</a>). It’s very similar to <a href="../01/SA1_8.html" target="_blank">SĀ 1.8</a>, which is a simpler version of <a href="https://suttacentral.net/sn35.26" target="_blank">SN 35.26</a>-<a href="https://suttacentral.net/sn35.27" target="_blank">27</a>. However, “know and understand” (<span class="ch">知、明</span>) has been omitted. [<a href="#ref1">back</a>]</p></li>
 </ol>
 <hr/>
 
