--- a/01_agama/samyukta/02/SA2_10.md
+++ b/01_agama/samyukta/02/SA2_10.md
@@ -14,19 +14,19 @@ next: SA2_11-14.html
   <th class='ch'>（一九四） 於苦喜</th>
   <th class='en'>10 (194). Delight in Suffering</th>
   <tr>
-    <td class="ch" title='t99.2.50a1'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td class='ch' title='t99.2.50a1'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.50a2'>爾時，世尊告諸比丘： 「若於眼生喜者，則於苦生喜。 若於苦生喜者，我說彼不解脫於苦。 於耳⋯鼻⋯舌⋯身⋯意生喜者，則於苦生喜。 於苦生喜者，我說彼不解脫於苦。</td>
+    <td class='ch' title='t99.2.50a2'>爾時，世尊告諸比丘： 「若於眼生喜者，則於苦生喜。 若於苦生喜者，我說彼不解脫於苦。 於耳⋯鼻⋯舌⋯身⋯意生喜者，則於苦生喜。 於苦生喜者，我說彼不解脫於苦。</td>
     <td id='p2'>2. It was then that the Bhagavān addressed the monks, “If someone’s delight arises from the eye, then their delight arises from suffering. If someone’s delight arises from suffering, I say they are not liberated from suffering. If someone’s delight arises from the ear … nose … tongue … body … mind, then their delight arises from suffering. If someone’s delight arises from suffering, I say they are not liberated from suffering.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.50a6'>「諸比丘，若於眼不生喜者，則於苦不生喜。 於苦不生喜者，我說彼解脫於苦。 於耳⋯鼻⋯舌⋯身⋯意不生喜者，則於苦不生喜。 於苦不生喜者，我說彼解脫於苦。」</td>
+    <td class='ch' title='t99.2.50a6'>「諸比丘，若於眼不生喜者，則於苦不生喜。 於苦不生喜者，我說彼解脫於苦。 於耳⋯鼻⋯舌⋯身⋯意不生喜者，則於苦不生喜。 於苦不生喜者，我說彼解脫於苦。」</td>
     <td id='p3'>3. “Monks, if someone’s delight doesn’t arise from the eye, then their delight doesn’t arise from suffering. If someone’s delight doesn’t arise from suffering, I say they are liberated from suffering. If someone’s delight doesn’t arise from the ear … nose … tongue … body … mind, then their delight doesn’t arise from suffering. If someone’s delight doesn’t arise from suffering, I say they are liberated from suffering.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.50a9'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
+    <td class='ch' title='t99.2.50a9'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
     <td id='p4'>4. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.</td>
   </tr>
 </table>
@@ -36,7 +36,7 @@ next: SA2_11-14.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is <em>sūtra</em> no. 194 in the <cite>Taisho</cite> edition and no. 188 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0050a01" target="_blank">T99.2.50a1-10</a>). It’s parallel with <a href="https://suttacentral.net/sn35.19" target="_blank">SN 35.19</a>. <a href="https://suttacentral.net/sn35.20" target="_blank">SN 35.20</a> applies the same template to the outer senses. This <em>sūtra</em> also shares the same template with <a href="../01/SA1_10.html" target="_blank">SĀ 1.10</a> and <a href="https://suttacentral.net/sn22.29" target="_blank">SN 22.29</a>, which apply it to the aggregates. [<a href="#ref1">back</a>]</li>
+<li id="n1"><p>This is <em>sūtra</em> no. 194 in the <cite>Taisho</cite> edition and no. 188 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0050a01" target="_blank">T99.2.50a1-10</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0217a03" target="_blank">Y30.217a3-8</a>). It’s parallel with <a href="https://suttacentral.net/sn35.19" target="_blank">SN 35.19</a>. <a href="https://suttacentral.net/sn35.20" target="_blank">SN 35.20</a> applies the same template to the outer senses. This <em>sūtra</em> also shares the same template with <a href="../01/SA1_10.html" target="_blank">SĀ 1.10</a> and <a href="https://suttacentral.net/sn22.29" target="_blank">SN 22.29</a>, which apply it to the aggregates. [<a href="#ref1">back</a>]</p></li>
 </ol>
 <hr/>
 
