--- a/01_agama/samyukta/02/SA2_6.md
+++ b/01_agama/samyukta/02/SA2_6.md
@@ -14,19 +14,19 @@ next: SA2_7.html
   <th class='ch'>（一九〇） 不知</th>
   <th class='en'>6 (190). Not Knowing</th>
   <tr>
-    <td class="ch" title='t99.2.49b26'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td class='ch' title='t99.2.49b26'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.49b27'>爾時，世尊告諸比丘： 「若於眼不識、不知、不斷、不離欲者，不堪任正盡苦。 耳、鼻、舌、身、意亦復如是。</td>
+    <td class='ch' title='t99.2.49b27'>爾時，世尊告諸比丘： 「若於眼不識、不知、不斷、不離欲者，不堪任正盡苦。 耳、鼻、舌、身、意亦復如是。</td>
     <td id='p2'>2. It was then that the Bhagavān addressed the monks, “When one doesn’t know or understand the eye, and they don’t stop or become free of desire for it, they aren’t capable of correctly ending suffering. <em>The ear, nose, tongue, body, and mind are likewise.</em></td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.49b29'>「諸比丘，於眼若識、若知、若斷、若離欲者，堪任正盡苦。 於耳、鼻、舌、身、意，若識、若知、若斷、若離欲者，堪任正盡苦。」</td>
+    <td class='ch' title='t99.2.49b29'>「諸比丘，於眼若識、若知、若斷、若離欲者，堪任正盡苦。 於耳、鼻、舌、身、意，若識、若知、若斷、若離欲者，堪任正盡苦。」</td>
     <td id='p3'>3. “Monks, if someone knows and understands the eye, and they stop and become free of desire for it, they’re capable of correctly ending suffering. If someone knows and understands the eye … nose … tongue … body … mind, and they stop and become free of desire for it, they’re capable of correctly ending suffering.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.49c2'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
+    <td class='ch' title='t99.2.49c2'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
     <td id='p4'>4. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.</td>
   </tr>
 </table>
@@ -36,7 +36,7 @@ next: SA2_7.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is <em>sūtra</em> no. 190 in the <cite>Taisho</cite> edition and no. 184 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0049b26" target="_blank">T99.2.49b26-c3</a>). It has a strong similarity to <a href="https://suttacentral.net/sn35.26" target="_blank">SN 35.26</a>-<a href="https://suttacentral.net/sn35.27" target="_blank">27</a>. Note that these Pali parallels treat the eighteen elements, three types of feeling of experience, and knowledge gain by the senses, whereas this <em>sūtra</em> applies a simpler template to the six sense fields. It is essentially the same as <a href="../01/SA1_6.html" target="_blank">SĀ 1.6</a> applied to the senses. [<a href="#ref1">back</a>]</li>
+<li id="n1"><p>This is <em>sūtra</em> no. 190 in the <cite>Taisho</cite> edition and no. 184 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0049b26" target="_blank">T99.2.49b26-c3</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0215a12" target="_blank">Y30.215a12-6a1</a>). It has a strong similarity to <a href="https://suttacentral.net/sn35.26" target="_blank">SN 35.26</a>-<a href="https://suttacentral.net/sn35.27" target="_blank">27</a>. Note that these Pali parallels treat the eighteen elements, three types of feeling of experience, and knowledge gain by the senses, whereas this <em>sūtra</em> applies a simpler template to the six sense fields. It is essentially the same as <a href="../01/SA1_6.html" target="_blank">SĀ 1.6</a> applied to the senses. [<a href="#ref1">back</a>]</p></li>
 </ol>
 <hr/>
 
