--- a/01_agama/samyukta/02/SA2_7.md
+++ b/01_agama/samyukta/02/SA2_7.md
@@ -14,19 +14,19 @@ next: SA2_8.html
   <th class='ch'>（一九一） 不知</th>
   <th class='en'>7 (191). Not Knowing (2)</th>
   <tr>
-    <td class="ch" title='t99.2.49c4'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td class='ch' title='t99.2.49c4'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.49c5'>爾時，世尊告諸比丘： 「於眼若不識、不知、不斷、不離欲者，不堪任越生、老、病、死苦。 耳、鼻、舌、身、意，不識、不知、不斷、不離欲者，不堪任越生、老、病、死苦。</td>
+    <td class='ch' title='t99.2.49c5'>爾時，世尊告諸比丘： 「於眼若不識、不知、不斷、不離欲者，不堪任越生、老、病、死苦。 耳、鼻、舌、身、意，不識、不知、不斷、不離欲者，不堪任越生、老、病、死苦。</td>
     <td id='p2'>2. It was then that the Bhagavān addressed the monks, “If someone doesn’t know and understand the eye, and they don’t stop and become free of desire for it, they aren’t capable of transcending the suffering of birth, old age, illness, and death. If someone doesn’t know and understand the ear … nose … tongue … body … mind, and they don’t stop and become free of desire for it, they aren’t capable of transcending the suffering of birth, old age, illness, and death.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.49c8'>「諸比丘，於色若識、若知、若斷、若離欲者，堪任越生、老、病、死苦。 於耳、鼻、舌、身、意，若識、若知、若斷、若離欲，堪任越生、老、病、死苦。」</td>
+    <td class='ch' title='t99.2.49c8'>「諸比丘，於色若識、若知、若斷、若離欲者，堪任越生、老、病、死苦。 於耳、鼻、舌、身、意，若識、若知、若斷、若離欲，堪任越生、老、病、死苦。」</td>
     <td id='p3'>3. “Monks, if someone knows and understands the eye, and they stop and become free of desire for it, they’re capable of transcending the suffering of birth, old age, illness, and death. If they know and understand the ear … nose … tongue … body … mind, and they stop and become free of desire for it, they’re capable of transcending the suffering of birth, old age, illness, and death.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.49c11'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
+    <td class='ch' title='t99.2.49c11'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
     <td id='p4'>4. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.</td>
   </tr>
 </table>
@@ -36,7 +36,7 @@ next: SA2_8.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is <em>sūtra</em> no. 191 in the <cite>Taisho</cite> edition and no. 185 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0049c04" target="_blank">T99.2.49c4-12</a>). It uses the same template as <a href="../01/SA1_7.html" target="_blank">SĀ 1.7</a>, which is a narrower version of the one we find in <a href="https://suttacentral.net/sn35.26" target="_blank">SN 35.26</a>-<a href="https://suttacentral.net/sn35.27" target="_blank">27</a> that covers more than the six sense fields. [<a href="#ref1">back</a>]</li>
+<li id="n1"><p>This is <em>sūtra</em> no. 191 in the <cite>Taisho</cite> edition and no. 185 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0049c04" target="_blank">T99.2.49c4-12</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0216a02" target="_blank">Y30.216a2-7</a>). It uses the same template as <a href="../01/SA1_7.html" target="_blank">SĀ 1.7</a>, which is a narrower version of the one we find in <a href="https://suttacentral.net/sn35.26" target="_blank">SN 35.26</a>-<a href="https://suttacentral.net/sn35.27" target="_blank">27</a> that covers more than the six sense fields. [<a href="#ref1">back</a>]</p></li>
 </ol>
 <hr/>
 
