added translation of SA 1.74 to 112. A couple minor corrections and changes to trans. in SA 1.62-73.

--- a/01_agama/samyukta/01/SA1_62-73.md
+++ b/01_agama/samyukta/01/SA1_62-73.md
@@ -4,7 +4,7 @@ title: 'The Related Discourses | 1. The Aggregates | 62-73 (65). Feeling'
 type: kramdown
 base: ../../../
 previous: SA1_61.html
-next: SA1_138.html
+next: SA1_74-85.html
 ---
 
 <h1><a href='../index.html'>The Related Discourses</a></h1>
@@ -18,12 +18,12 @@ next: SA1_138.html
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class='ch' title='t99.2.17a24'>爾時，世尊告諸比丘： 「常當修習方便禪思，內寂其心。 所以者何？ 比丘常當修習方便禪思，內寂其心，如實觀察。 云何如實觀察？ 『此是色』、『此是色集』、『此是色滅』，『此是受⋯想⋯行⋯識』、『此是識集』、『此是識滅』。</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “You must always cultivate the methods of meditative contemplation and have inner peace in your heart. Why is that? A monk must always cultivate the methods of meditative contemplation and have inner peace in his heart to truly [62] examine … [63] discern … [64] discern in various ways … [65] know … [66] know in detail … [67] know in various ways … [68] be familiar with, [69] cultivate, [70] cultivate often, [71] enter, [72] contact, and [73] realize something. What is truly examined … <em>up to</em> … realized? ‘This is form.’ ‘This is form’s formation.’ ‘This is form’s cessation.’ ‘This is feeling … conception … volition … awareness.’ ‘This is the formation of awareness.’ ‘This is the cessation of awareness.’</td>
+    <td class='ch' title='t99.2.17a24'>爾時，世尊告諸比丘： 「常當修習方便禪思，內寂其心。 所以者何？ 比丘常當修習方便禪思，內寂其心，如實觀察。 云何如實觀察？ 『此是色』、『此是色集』、『此是色滅』。 『此是受⋯想⋯行⋯識』、『此是識集』、『此是識滅』。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “You must always cultivate the methods of meditating and having an inner peace in your heart. Why is that? A monk must always cultivate the methods of meditating and having inner peace in his heart to truly [62] examine … [63] discern … [64] discern in various ways … [65] know … [66] know in detail … [67] know in various ways … [68] be familiar with … [69] cultivate … [70] cultivate often … [71] enter … [72] contact … [73] realize something. What is truly examined … <em>up to</em> … realized? ‘This is form.’ ‘This is form’s formation.’ ‘This is form’s cessation.’ ‘This is feeling … conception … volition … awareness.’ ‘This is the formation of awareness.’ ‘This is the cessation of awareness.’</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.17a28'>「云何色集⋯受⋯想⋯行⋯識集？ 愚癡、無聞凡夫於苦、樂、不苦不樂受，不如實觀察。 『此受集』⋯『受滅』⋯『受味』⋯『受患』⋯『受離』不如實觀察故，於受樂著生取。 取緣有，有緣生，生緣老、病、死、憂、悲、惱、苦。 如是純大苦聚從集而生。 是名色集。 是名受⋯想⋯行⋯識集。</td>
-    <td id='p3'>3. “What is the formation of form … feeling … conception … volition … the formation of awareness? A foolish, unlearned man doesn’t truly examine … <em>up to</em> … realize painful, pleasant, and neither painful nor pleasant feelings. Because he doesn’t truly examine … <em>up to</em> … realize ‘this is the formation of feeling’ … ‘cessation of feeling’ … ‘enjoyment of feeling’ … ‘trouble of feeling’ … ‘escape of feeling,’ grasping is produced from his delight and attachment to feeling. Grasping conditions existence, existence conditions birth, and birth conditions old age, illness, death, sorrow, lamentation, trouble, and pain. The whole mass of suffering forms in this way and arises. This is called the formation of form. This is called the formation of feeling … conception … volition … awareness.</td>
+    <td id='p3'>3. “What is the formation of form … feeling … conception … volition … the formation of awareness? A foolish, uneducated man doesn’t truly examine … <em>up to</em> … realize painful, pleasant, and neither painful nor pleasant feelings. Because he doesn’t truly examine … <em>up to</em> … realize ‘this is the formation of feeling’ … ‘cessation of feeling’ … ‘enjoyment of feeling’ … ‘trouble of feeling’ … ‘escape of feeling,’ grasping is produced from his delight and attachment to feeling. Grasping conditions existence, existence conditions birth, and birth conditions old age, illness, death, sorrow, lamentation, trouble, and pain. The whole mass of suffering forms in this way and arises. This is called the formation of form. This is called the formation of feeling … conception … volition … awareness.</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.17b5'>「云何色滅⋯受⋯想⋯行⋯識滅？ 多聞聖弟子受諸苦、樂、不苦不樂受，如實觀察。 『此受集』⋯『受滅』⋯『受味』⋯『受患』⋯『受離』如實觀察故，於受樂著滅。 著滅故取滅，取滅故有滅，有滅故生滅，生滅故老、病、死、憂、悲、惱、苦滅。 如是純大苦聚皆悉得滅。 是名色滅⋯受⋯想⋯行⋯識滅。</td>
@@ -31,7 +31,7 @@ next: SA1_138.html
   </tr>
   <tr>
     <td class='ch' title='t99.2.17b10'>「是故，比丘，常當修習方便禪思，內寂其心。 比丘，禪思住，內寂其心。 精勤方便，如實觀察。」</td>
-    <td id='p5'>5. “Therefore, monks, you must always cultivate the methods of meditative contemplation and have inner peace in your heart. Monks, abide in meditative contemplation, have inner peace in your heart. Be diligent in these methods, and truly examine … <em>up to</em> … realize these things.”<sup id="ref2"><a href="#n2">2</a></sup></td>
+    <td id='p5'>5. “Therefore, monks, you must always cultivate the methods of meditating and having an inner peace in your heart. Monks, abide in meditating and having an inner peace in your heart. Be diligent in these methods, and truly examine … <em>up to</em> … realize these things.”<sup id="ref2"><a href="#n2">2</a></sup></td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.17b12'>佛說此經已，諸比丘聞佛所說，歡喜奉行。</td>
@@ -48,16 +48,16 @@ next: SA1_138.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1"><p>This is <em>sūtra</em> no. 65 in the <cite>Taisho</cite> edition and nos. 62-73 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0017a23" target="_blank">T99.2.17a23-b15</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0107a03" target="_blank">Y30.107a3-8a1</a>). The basic template is similar to <a href="https://suttacentral.net/sn22.5" target="_blank">SN 22.5</a>-<a href="https://suttacentral.net/sn22.6" target="_blank">6</a>. However, in this case, that template has been replicated with twelve different verbs for understanding.</p>
-<p>This will be repeated with <a href="SA1_74-85.html" target="_blank">SĀ 1.74-85 (66)</a>, <a href="SA1_86-97.html" target="_blank">SĀ 1.86-97 (67)</a>, and <a href="SA1_98-109.html" target="_blank">SĀ 1.98-109 (68)</a>. Each of these sets of twelve <em>sūtra</em>s change the subject that’s understood and replicate the template with the same twelve synonyms for understanding. Thus, four variations are multiplied in twelve ways to arrive at a total of 48 <em>sūtra</em>s. [<a href="#ref1">back</a>]</p></li>
+<li id="n1"><p>This is <em>sūtra</em> no. 65 in the <cite>Taisho</cite> edition and nos. 62-73 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0017a23" target="_blank">T99.2.17a23-b15</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0107a03" target="_blank">Y30.107a3-8a1</a>). The basic template is similar to <a href="https://suttacentral.net/sn22.5" target="_blank">SN 22.5</a>-<a href="https://suttacentral.net/sn22.6" target="_blank">6</a>. However, in this case, that template has been replicated with twelve different verbs that are synonyms for understanding something.</p>
+<p>This will be repeated with <a href="SA1_74-85.html" target="_blank">SĀ 1.74-85 (66)</a>, <a href="SA1_86-97.html" target="_blank">SĀ 1.86-97 (67)</a>, and <a href="SA1_98-109.html" target="_blank">SĀ 1.98-109 (68)</a>. Each of these sets of twelve <em>sūtra</em>s change the subject that’s understood and replicate the template with the same twelve synonyms for understanding it. Thus, four variations are multiplied in twelve ways to arrive at a total of 48 <em>sūtra</em>s. [<a href="#ref1">back</a>]</p></li>
 <li id="n2"><p>This conclusion is very similar to the conclusions that are found throughout the <em>Ekottarika Āgama</em>. The format is such that the Buddha sums up the teaching with a brief axiom to follow and then exhorts the monks to train in that way. There is no mention of training here, but the effect is the same. This type of concluding statement is scattered here and there in both Theravāda and Sarvāstivāda EBTs, but it’s found at the end of the majority of <em>sūtra</em>s in EĀ. [<a href="#ref2">back</a>]</p></li>
 <li id="n3"><p><em>“be familiar with,” “cultivate,” “cultivate often,” … twelve </em>sūtra<em>s</em>. C. <span class="ch">親近、親近修習⋯二經</span>. The <cite>Taisho</cite> reading of this passage has apparently suffered some corruption. We can tell this first by the fact that the list of items totals only to eleven <em>sūtra</em>s. This might be fine, but it ends with mention of “two <em>sūtra</em>s,” which makes little sense. The notes to the next three <em>sūtra</em>s abbreviate the list of variant keywords but mention a total of twelve <em>sūtra</em>s.</p>
-<p>Yinshun suggests the solution of amending the note to read “twelve” by inserting <span class="ch">十</span>. He also hypothesizes that the list of keywords has repeated <span class="ch">親近</span> in error and omitted <span class="ch">多修習</span>, which often occurs with <span class="ch">修習</span> in Sarvāstivāda EBTs. He cites a passage in the <cite>Yogācārabhūmi</cite> that comments on the three keywords “familiarize with, cultivate, and cultivate often” (<span class="ch">親近、修習、多修習</span>) as a precedent for this reading (cf. <a href="https://cbetaonline.dila.edu.tw/zh/T30n1579_p0783b01" target="_blank">T1579.30.783b1-5</a>). The resulting reconstruction would read: “<span class="ch">如觀察，如是分別、種種分別、知、廣知、種種知、<strong>親近、修習、多修習</strong>、入、觸、證<strong>十</strong>二經，亦如是廣說</span>.”</p>
+<p>Yinshun suggests the solution of amending the note to read “twelve” by inserting <span class="ch">十</span>. This is supported by the <em>sūtra</em> groups that follow with the same variants note but read “twelve <em>sūtra</em>s” instead of “two <em>sūtra</em>s.” He also hypothesizes that the list of keywords has repeated <span class="ch">親近</span> in error and omitted <span class="ch">多修習</span>, which often occurs with <span class="ch">修習</span> in Sarvāstivāda EBTs. He cites a passage in the <cite>Yogācārabhūmi</cite> that comments on the three keywords “familiarize with, cultivate, and cultivate often” (<span class="ch">親近、修習、多修習</span>) as a precedent for this reading (cf. <a href="https://cbetaonline.dila.edu.tw/zh/T30n1579_p0783b01" target="_blank">T1579.30.783b1-5</a>). The resulting reconstruction would read: “<span class="ch">如觀察，如是分別、種種分別、知、廣知、種種知、<strong>親近、修習、多修習</strong>、入、觸、證<strong>十</strong>二經，亦如是廣說</span>.”</p>
 <p>Overall, it seems plausible given the textual issues throughout SĀ. I have followed his suggestions in my translation here. [<a href="#ref3">back</a>]</p></li>
 </ol>
 <hr/>
 
 <p class="translator">Translator: Charles Patton</p>
-<p class='revised'>Last Revised: 17 June 2025</p>
+<p class='revised'>Last Revised: 10 February 2026</p>
 
 <hr/>
