--- a/01_agama/samyukta/05/SA5_1.md
+++ b/01_agama/samyukta/05/SA5_1.md
@@ -36,9 +36,9 @@ next: SA5_2.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is <em>sūtra</em> no. 444 in the <cite>Taisho</cite> edition and no. 692 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0114c27" target="_blank">T99.2.114c27-5a4</a>). It does not appear to have a parallel. The point about the elements (C. <span class="ch">界</span>, P/S. <em>dhātu</em>) being measureless in number is explained in the <cite>Yogācārabhūmi</cite> commentary as meaning that the eighteen basic elements of experience manifest in countless different ways in the karmic destinations of sentient beings (<span class="ch">雖界種類十八可得，然一一界，業趣有情種種品類有差別故，當知無量</span> [<a href="https://cbetaonline.dila.edu.tw/zh/T30n1579_p0846c24" target="_blank">T1579.30.846c24</a>]). This point will be brought out in the <em>sūtra</em>s that follow as they give examples of sentient beings being grouped according to their experiences and interests. [<a href="#ref1">back</a>]</p></li>
-<li id="n2"><em>put element after element into it</em>. C. <span class="ch">界界安置</span>. In this metaphor, the elements are likened to the individual ingredients that are mixed together to make a medicine. The medicine itself must be something fantastic that includes every ingredient possible. An interesting bit of context that may or may not apply here is that eye oinments were sometimes used to help meditators stay awake late into the night. The Indic term translated here as “eye medicine” (<span class="ch">眼藥</span>) is likely S. <em>añjana</em> or <em>bhaiṣajyâñjana</em>. [<a href="#ref2">back</a>]</p></li>
-<li id="n3"><em>you should [discern] the various elements well</em>. C. <span class="ch">當善界學善種種界</span>. A very similar conclusion occurs in SĀ 5.4, which reads <span class="ch">當善分別種種諸界</span>. I wonder if this conclusion has been corrupted by inserting <span class="ch">界</span> before <span class="ch">學</span>. It would seem that <span class="ch">善界學善種種界</span> should read along the same lines as <span class="ch">善分別種種諸界</span>, but I have preserved the Chinese reading here as it is. [<a href="#ref3">back</a>]</p></li>
+<li id="n1"><p>This is <em>sūtra</em> no. 444 in the <cite>Taisho</cite> edition and no. 692 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0114c27" target="_blank">T99.2.114c27-5a4</a>). It does not appear to have a parallel. The point about the elements (C. <span class="ch">界</span>, P/S. <em>dhātu</em>) being measureless in number is explained in the <cite>Yogācārabhūmi</cite> commentary as meaning that the eighteen basic elements of experience manifest in countless different ways in the karmic destinations of sentient beings (<span class="ch">雖界種類十八可得，然一一界，業趣有情種種品類有差別故，當知無量</span> [<a href="https://cbetaonline.dila.edu.tw/zh/T30n1579_p0846c24" target="_blank">T1579.30.846c24</a>]). This point will be brought out in the <em>sūtra</em>s that follow as they give examples of sentient beings being grouped according to their experiences and interests. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>put element after element into it</em>. C. <span class="ch">界界安置</span>. In this metaphor, the elements are likened to the individual ingredients that are mixed together to make a medicine. The medicine itself must be something fantastic that includes every ingredient possible. An interesting bit of context that may or may not apply here is that eye oinments were sometimes used to help meditators stay awake late into the night. The Indic term translated here as “eye medicine” (<span class="ch">眼藥</span>) is likely S. <em>añjana</em> or <em>bhaiṣajyâñjana</em>. [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p><em>you should [discern] the various elements well</em>. C. <span class="ch">當善界學善種種界</span>. A very similar conclusion occurs in SĀ 5.4, which reads <span class="ch">當善分別種種諸界</span>. I wonder if this conclusion has been corrupted by inserting <span class="ch">界</span> before <span class="ch">學</span>. It would seem that <span class="ch">善界學善種種界</span> should read along the same lines as <span class="ch">善分別種種諸界</span>, but I have preserved the Chinese reading here as it is. [<a href="#ref3">back</a>]</p></li>
 </ol>
 <hr/>
 
