various edits and typo fixes

--- a/01_agama/ekottarika/01/EA_01_01.md
+++ b/01_agama/ekottarika/01/EA_01_01.md
@@ -628,7 +628,7 @@ next: ../02/EA_02_01.html
   </ul></td>
   <td><ul class='verse'>
     <li>Then, the palaces of gods, <em>nāga</em>s, and <em>asura</em>s,<br/>
-    And the <em>gandharva</em>s, et al. at Kuśinagara.<br/>
+    And the <em>gandharva</em>s et al. at Kuśinagara.<br/>
     If the place a <em>sūtra</em> was taught is unknown,<br/>
     I’ll say its origin was in Śrāvastī.</li>
   </ul></td>
