--- a/01_agama/samyukta/01/SA1_110-112.md
+++ b/01_agama/samyukta/01/SA1_110-112.md
@@ -19,7 +19,7 @@ next: SA1_138.html
   </tr>
   <tr>
     <td class='ch' title='t99.2.18a27'>爾時，世尊告諸比丘： 「我今當說有身集趣道及有身集滅道。 云何有身集趣道？ 愚癡、無聞凡夫，見不如實知色集、色滅、色味、色患、色離。 不如實知故，樂色、歎色、著色、住色。 樂色、歎色、著色、住色故，愛樂取。 緣取有，緣有生，緣生、老、病、死、憂、悲、苦、惱。 如是純大苦聚生。 如是受、想、行、識廣說。 是名有身集趣道。 比丘，有身集趣道，當知即是苦集趣道。</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “Now, I [110] will teach … [111] there is … [112] you should know the path that leads to the formation of having a body and the path that ceases that formation. What is the path that leads to the formation of having a body? A foolish, uneducated man doesn’t truly know [form,] form’s formation, form’s cessation, form’s enjoyment, form’s trouble, or form’s escape. Because he doesn’t truly know it, he delights in form, praises form, attaches to form, and abides in form. He grasps craving and delight because he delights in form, praises form, attaches to form, and abides in form. Existence is dependent on grasping, birth is dependent on existence, and old age, illness, death, sorrow, lamentation, trouble, and pain are dependent on birth. In this way, the whole mass of suffering arises. <em>Feeling, conception, volition, and awareness are discussed in this way.</em> This is called the path leading to the formation of having a body. Monks, the path leading to the formation of having a body should be known to be the path that leads to the formation of suffering.</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “Now, [110] I will teach … [111] there is … [112] you should know the path that leads to the formation of having a body and the path that ceases that formation. What is the path that leads to the formation of having a body? A foolish, uneducated man doesn’t truly know [form,] form’s formation, form’s cessation, form’s enjoyment, form’s trouble, or form’s escape. Because he doesn’t truly know it, he delights in form, praises form, attaches to form, and abides in form. He grasps craving and delight because he delights in form, praises form, attaches to form, and abides in form. Existence is dependent on grasping, birth is dependent on existence, and old age, illness, death, sorrow, lamentation, trouble, and pain are dependent on birth. In this way, the whole mass of suffering arises. <em>Feeling, conception, volition, and awareness are discussed in this way.</em> This is called the path leading to the formation of having a body. Monks, the path leading to the formation of having a body should be known to be the path that leads to the formation of suffering.</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.18b6'>「云何有身集滅道？ 多聞聖弟子如實知色、色集、色滅、色味、色患、色離。 如實知故，於色不樂、不歎、不著、不住。 不樂、不歎、不著、不住故，彼色愛樂滅。 愛樂滅則取滅。 取滅則有滅。 有滅則生滅。 生滅則老、病、死、憂、悲、苦、惱，純大苦聚滅。 如色，受、想、行、識亦如是。 是名有身滅道跡。 有身滅道跡，則是苦滅道跡。 是故說有身滅道跡。」</td>
@@ -30,8 +30,8 @@ next: SA1_138.html
     <td id='p4'>4. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.</td>
   </tr>
   <tr>
-    <td class='ch' title='t99.2.18b15'>（如當說，有及當知，亦如是說。）</td>
-    <td>(<em>Like [110] “will teach,” [111] “there is” and [112] “you should know” are also taught in this way.</em>)</td>
+    <td class='ch' title='t99.2.18b15'>（如「當說」，「有」及「當知」，亦如是說。）</td>
+    <td>(<em>Like [110] “I will teach,” [111] “there is” and [112] “you should know” are also taught in this way.</em>)</td>
   </tr>
 </table>
 
