--- a/01_agama/samyukta/01/SA1_62-73.md
+++ b/01_agama/samyukta/01/SA1_62-73.md
@@ -38,7 +38,7 @@ next: SA1_74-85.html
     <td id='p6'>6. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.</td>
   </tr>
   <tr>
-    <td class='ch' title='t99.2.17b14'>如觀察，如是分別、種種分別、知、廣知、種種知、親近、親近修習、入、觸、證二經，亦如是廣說。</td>
+    <td class='ch' title='t99.2.17b14'>（如「觀察」，如是「分別」、「種種分別」、「知」、「廣知」、「種種知」、「親近」、「親近修習」、「入」、「觸」、「證」二經，亦如是廣說。）</td>
     <td>(<em>Like [62] “examine,” likewise is [63] “discern,” [64] “discern in various ways,” [65] “know,” [66] “know in detail,” [67] “know in various ways,” [68] “be familiar with,” [69] “cultivate,” [70] “cultivate often,” [71] “enter,” [72] “contact,” and [73] “realize” are twelve </em>sūtra<em>s recited in full.<sup id="ref3"><a href="#n3">3</a></sup></em>)</td>
   </tr>
 </table>
