--- a/01_agama/samyukta/01/SA1_74-85.md
+++ b/01_agama/samyukta/01/SA1_74-85.md
@@ -38,8 +38,8 @@ next: SA1_86-97.html
     <td id='p6'>6. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.</td>
   </tr>
   <tr>
-    <td class='ch' title='t99.2.17c9'>（如觀察，如是⋯乃至⋯作證十二經，亦應廣說。）</td>
-    <td>(<em>Like [74] “examine,” likewise [is [75] “discern,” [76] “discern in various ways,” [77] “know,” [78] “know in detail,” [79] “know in various ways,” [80] “be familiar with,” [81] “cultivate,” [82] “cultivate often,” [83] “enter,” and [84] “contact,” and [85] “realize” are twelve </em>sūtra<em>s recited in full.<sup id="ref2"><a href="#n2">2</a></sup></em>)</td>
+    <td class='ch' title='t99.2.17c9'>（如「觀察」，如是⋯乃至⋯「作證」十二經，亦應廣說。）</td>
+    <td>(<em>Like [74] “examine,” likewise [are [75] “discern,” [76] “discern in various ways,” [77] “know,” [78] “know in detail,” [79] “know in various ways,” [80] “be familiar with,” [81] “cultivate,” [82] “cultivate often,” [83] “enter,” and [84] “contact,” and] [85] “realize” are twelve </em>sūtra<em>s recited in full.<sup id="ref2"><a href="#n2">2</a></sup></em>)</td>
   </tr>
 </table>
 
