--- a/01_agama/samyukta/01/SA1_86-97.md
+++ b/01_agama/samyukta/01/SA1_86-97.md
@@ -42,7 +42,7 @@ next: SA1_98-109.html
     <td id='p7'>7. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.</td>
   </tr>
   <tr>
-    <td class='ch' title='t99.2.18a5'>（如觀察⋯乃至⋯作證十二經，亦如是廣說。）</td>
+    <td class='ch' title='t99.2.18a5'>（如「觀察」⋯乃至⋯「作證」十二經，亦如是廣說。）</td>
     <td>(<em>Like [86] “examine,” [likewise is [87] “discern,” [88] “discern in various ways,” [89] “know,” [90] “know in detail,” [91] “know in various ways,” [92] “be familiar with,” [93] “cultivate,” [94] “cultivate often,” [95] “enter,” [96] “contact,” and] [97] “realize” are twelve </em>sūtra<em>s recited in full.<sup id="ref4"><a href="#n4">4</a></sup></em>)</td>
   </tr>
 </table>
