--- a/01_agama/samyukta/01/SA1_98-109.md
+++ b/01_agama/samyukta/01/SA1_98-109.md
@@ -38,7 +38,7 @@ next: SA1_110-112.html
     <td id='p6'>6. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.</td>
   </tr>
   <tr>
-    <td class='ch' title='t99.2.18a23'>（如觀察⋯乃至⋯作證十二經，亦如是廣說。）</td>
+    <td class='ch' title='t99.2.18a23'>（如「觀察」⋯乃至⋯「作證」十二經，亦如是廣說。）</td>
     <td>(<em>Like [98] “examine,” [likewise is [99] “discern,” [100] “discern in various ways,” [101] “know,” [102] “know in detail,” [103] “know in various ways,” [104] “be familiar with,” [105] “cultivate,” [106] “cultivate often,” [107] “enter,” [108] “contact,” and] [109] “realize” are twelve </em>sūtra<em>s recited in full.<sup id="ref4"><a href="#n4">4</a></sup></em>)</td>
   </tr>
 <tr>
