--- a/01_agama/samyukta/02/SA2_58-74.md
+++ b/01_agama/samyukta/02/SA2_58-74.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 2. The Sense Fields | 58-74 (201). How to End the Contaminants, et al.'
+title: 'The Related Discourses | 2. The Sense Fields | 58-74 (201). How to End the Contaminants et al.'
 type: kramdown
 base: ../../../
 previous: SA2_57.html
@@ -12,7 +12,7 @@ next: SA2_75.html
 
 <table class="trans">
   <th class='ch'>（二〇一） 云何得漏盡</th>
-  <th class='en'>58-74 (201). How to End the Contaminants, et al.</th>
+  <th class='en'>58-74 (201). How to End the Contaminants et al.</th>
   <tr>
     <td class="ch" title='t99.2.51c11'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
