--- a/01_agama/samyukta/05/SA5_20.md
+++ b/01_agama/samyukta/05/SA5_20.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 5. Elements | 20 (452). The Variety of Contacts, et al.'
+title: 'The Related Discourses | 5. Elements | 20 (452). The Variety of Contacts et al.'
 type: kramdown
 base: ../../../
 previous: SA5_19.html
@@ -12,7 +12,7 @@ next: SA5_21.html
 
 <table class="trans">
   <th class='ch'>（四五二） 種種觸等</th>
-  <th class='en'>20 (452). The Variety of Contacts, et al.</th>
+  <th class='en'>20 (452). The Variety of Contacts et al.</th>
   <tr>
     <td class='ch' title='t99.2.116a5'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
@@ -31,7 +31,7 @@ next: SA5_21.html
   </tr>
   <tr>
     <td class='ch' title='t99.2.116a14'>「諸比丘，非緣種種愛生種種受。 非緣種種受生種種觸。 非緣種種觸生種種界。 要緣種種界生種種觸。 緣種種觸生種種受。 緣種種受生種種愛。 是名比丘緣種種界生種種觸，緣種種觸生種種受，緣種種受生種種愛。」</td>
-    <td id='p5'>5. “Monks, the variety of feelings don’t arise dependent on the variety of cravings. The variety of contacts don’t arise dependent on the variety of feelings. The variety of elements don’t arise dependent on the variety of contacts. The condition of the variety of elements is necessary for the variety of contacts to arise. The condition of the variety of contacts is necessary for the variety of feelings to arise. The condition of the variety of feelings is necessary for the variety of cravings to arise. This is called a monk’s variety of contacts arising dependent on the variety of elements, variety of feelings arising dependent on the variety of contacts, and variety of cravings arising dependent on the variety of feelings.</td>
+    <td id='p5'>5. “Monks, the variety of feelings don’t arise dependent on the variety of cravings. The variety of contacts don’t arise dependent on the variety of feelings. The variety of elements don’t arise dependent on the variety of contacts. The condition of the variety of elements is necessary for the variety of contacts to arise. The condition of the variety of contacts is necessary for the variety of feelings to arise. The condition of the variety of feelings is necessary for the variety of cravings to arise. This is called a monk’s variety of contacts arising dependent on the variety of elements, variety of feelings arising dependent on the variety of contacts, and variety of cravings arising dependent on the variety of feelings.”</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.116a20'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
@@ -45,7 +45,7 @@ next: SA5_21.html
 
 <ol class="notes-list">
 <li id="n1"><p>This is <em>sūtra</em> no. 452 in the <cite>Taisho</cite> edition and no. 711 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0116a05" target="_blank">T99.2.116a5-21</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y31n0030_p0165a02" target="_blank">Y30.165a2-10</a>). It’s parallel to <a href="https://suttacentral.net/sn14.2" target="_blank">SN 14.2-5</a>.</p>
-<p>This <em>sūtra</em> contains material that is spread out over several parallels in SN 14. SN 14.2 makes the point about contacts arising from the sensory elements. SN 14.3 makes the point that contacts rise from the elements, but elements don’t arise from contacts. SN 14.4 makes the point that feelings arise from contacts. SN 14.5 includes the point that feelings arise from contacts, but contacts don’t arise from feelings. None of these SN parallels include the point about cravings arising from feelings that we find here. [<a href="#ref1">back</a>]</p></li>
+<p>This <em>sūtra</em> contains material that is spread out over several parallels in SN 14. SN 14.2 makes the point about contacts arising from the sensory elements. SN 14.3 makes the point that contacts arise from the elements, but the elements don’t arise from contacts. SN 14.4 makes the point that feelings arise from contacts. SN 14.5 includes the point that feelings arise from contacts, but contacts don’t arise from feelings. None of these SN parallels include the point about cravings arising from feelings that we find here. [<a href="#ref1">back</a>]</p></li>
 <li id="n2"><p>There are alternate readings in a couple editions of the Chinese Buddhist canon that remove the descriptions of feeling and craving as arising from sensory contact. However, these repetitions are indeed present in the Pali parallels, so I have preserved the Taisho readings. The removal was probably an effort to make this <em>sūtra</em> read in the way that the next <em>sūtra</em> does, but the two are different versions of the same teaching, as we shall see. [<a href="#ref2">back</a>]</p></li>
 </ol>
 <hr/>
