--- a/01_agama/samyukta/05/SA5_21.md
+++ b/01_agama/samyukta/05/SA5_21.md
@@ -19,11 +19,11 @@ next: ../06/index.html
   </tr>
   <tr>
     <td class='ch' title='t99.2.116a23'>爾時，世尊告諸比丘： 「緣種種界生種種觸。 緣種種觸生種種受。 緣種種受生種種愛。</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “A variety of contacts arise dependent on the variety of elements. A variety of feelings arise dependent on the variety of contacts. A varirty of cravings arise dependent on the variety of feelings.</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “A variety of contacts arise dependent on the variety of elements. A variety of feelings arise dependent on the variety of contacts. A variety of cravings arise dependent on the variety of feelings.</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.116a25'>「云何種種界？ 謂十八界： 眼界、色界、眼識界⋯乃至⋯意界、法界、意識界。 是名種種界。</td>
-    <td id='p3'>3. “What is the variety of elements? They are the eighteen elements: the eye element, form element, and element of visual awareness … <em>up to</em> … the mind element, idea element, and element of mental awareness. This is called the variety of elements.</td>
+    <td id='p3'>3. “What is the variety of elements? They are the eighteen elements: the eye element, form element, and element of visual awareness … <em>up to</em> … the mind element, idea element, and element of mental awareness. These are called the variety of elements.</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.116a26'>「云何緣種種界生種種觸？ 緣種種觸生種種受？ 緣種種受生種種愛？ 謂緣眼界生眼觸。 非緣眼觸生眼界。 但緣眼界生眼觸。 緣眼觸生眼受。 非緣眼受生眼觸。 但緣眼觸生眼受。 緣眼受生眼愛。 非緣眼愛生眼受。 但緣眼受生眼愛。</td>
@@ -48,7 +48,7 @@ next: ../06/index.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1"><p>This is <em>sūtra</em> no. 453 in the <cite>Taisho</cite> edition and no. 712 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0116a22" target="_blank">T99.2.116a22-b13</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y31n0030_p0165a11" target="_blank">Y30.165a11-6a6</a>). It’s parallel to <a href="https://suttacentral.net/sn14.2" target="_blank">SN 14.2-6</a>.</p>
+<li id="n1"><p>This is <em>sūtra</em> no. 453 in the <cite>Taisho</cite> edition and no. 712 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0116a22" target="_blank">T99.2.116a22-b13</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y31n0030_p0165a11" target="_blank">Y30.165a11-6a6</a>). It’s parallel to <a href="https://suttacentral.net/sn14.2" target="_blank">SN 14.2-5</a>.</p>
 <p>This <em>sūtra</em> presents the same teaching as the previous one in a different format. See the notes to <a href="SA5_20.html" target="_blank">SĀ 5.20</a> for a summary of its parallels in SN 14. [<a href="#ref1">back</a>]</p></li>
 </ol>
 <hr/>
